--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,16 @@
 Package: goodpracticeeighteen
 Type: Package
-Title: What the Package Does (Title Case)
+Title: tests if a file its documentation contains examples
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Author: Richel Bilderbeek
+Maintainer: Richel Bilderbeek <richel@richelbilderbeek.nl>
+Description: this package is an experiment, to be added to
+  MangoTheCat their goodpractice package. Goal is to fix
+  issue 18 at their GitHub.
+License: file LICENSE
 LazyData: TRUE
+Imports:
+    tools
 Suggests:
     knitr,
     rmarkdown,
