--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,3 +18,5 @@ Suggests:
     testthat
 VignetteBuilder: knitr
 RoxygenNote: 5.0.1
+URL: https://github.com/richelbilderbeek/goodpracticeeighteen
+BugReports: https://github.com/richelbilderbeek/goodpracticeeighteen/issues
